// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spreadsheet Functions [AVERAGEIFS 4] =AVERAGEIFS(#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "AVERAGEIFS",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "name": ">",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "3",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [AVERAGEIFS 100] =AVERAGEIFS(#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >100) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "AVERAGEIFS",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "name": ">",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "100",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [COLUMN_COUNT] =#28e28190-63bd-4f70-aeca-26e72574c01a.COLUMN_COUNT() 1`] = `
Array [
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "name": ".",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "COLUMN_COUNT",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [COUNTA] =#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.COUNTA() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "name": ".",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "COUNTA",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [COUNTA] =#28e28190-63bd-4f70-aeca-26e72574c01a#2723b7d9-22ce-4d93-b2ef-7cce1b122d64.COUNTA() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#2723b7d9-22ce-4d93-b2ef-7cce1b122d64",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "name": ".",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "COUNTA",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [COUNTIFS =1] =COUNTIFS(#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, 3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "COUNTIFS",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "3",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [COUNTIFS >2] =COUNTIFS(#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, >2) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "COUNTIFS",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "name": ">",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "2",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [MAX] =#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.MAX() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "name": ".",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "MAX",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [SUM] =#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.SUM() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "name": ".",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "SUM",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [SUMIFS >3] =SUMIFS(#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "SUMIFS",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "name": ">",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "3",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [SUMIFS 4] =SUMIFS(#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, 4) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "SUMIFS",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "4",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [SUMPRODUCT] =SUMPRODUCT(#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "SUMPRODUCT",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([]).toArray() 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "Spreadsheet",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LBracket",
    "errors": Array [],
    "name": "[",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RBracket",
    "errors": Array [],
    "name": "]",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "name": ".",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "toArray",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([]).toArray() 2`] = `
Array [
  Object {
    "result": Array [
      Object {
        "result": "Column1",
        "type": "string",
      },
      Object {
        "result": "Column2",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "1",
        "type": "string",
      },
      Object {
        "result": "2",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "3",
        "type": "string",
      },
      Object {
        "result": "4",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([{a: 1}, {a: 2}]).toArray() 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "Spreadsheet",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LBracket",
    "errors": Array [],
    "name": "[",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LBrace",
    "errors": Array [],
    "name": "{",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "FunctionName",
    "errors": Array [],
    "name": "a",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Colon",
    "errors": Array [],
    "name": ":",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "1",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RBrace",
    "errors": Array [],
    "name": "}",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LBrace",
    "errors": Array [],
    "name": "{",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "FunctionName",
    "errors": Array [],
    "name": "a",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Colon",
    "errors": Array [],
    "name": ":",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "2",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RBrace",
    "errors": Array [],
    "name": "}",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "RBracket",
    "errors": Array [],
    "name": "]",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "name": ".",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "toArray",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([{a: 1}, {a: 2}]).toArray() 2`] = `
Array [
  Object {
    "result": Array [
      Object {
        "result": "a",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "1",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "2",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([1,2,3]).toArray() 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "Spreadsheet",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LBracket",
    "errors": Array [],
    "name": "[",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "1",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "2",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "3",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RBracket",
    "errors": Array [],
    "name": "]",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "name": ".",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "toArray",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [Spreadsheet] =Spreadsheet([1,2,3]).toArray() 2`] = `"Spreadsheet type unmatched: number"`;

exports[`Spreadsheet Functions [VLOOKUP 2 range default] =VLOOKUP("2", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "VLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "name": "\\"2\\"",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP 2 range true] =VLOOKUP("2", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, true) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "VLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "name": "\\"2\\"",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "BooleanLiteral",
    "errors": Array [],
    "name": "true",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "boolean",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP Column check] =VLOOKUP("", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "VLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "name": "\\"\\"",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP Not found 2 range false] =VLOOKUP("2", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, false) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "VLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "name": "\\"2\\"",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "BooleanLiteral",
    "errors": Array [],
    "name": "false",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "boolean",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP Not found] =VLOOKUP("", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "VLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "name": "\\"\\"",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP ok number] =VLOOKUP(1, #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "VLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "1",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP ok number] =VLOOKUP(1, #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, false) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "VLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "1",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "BooleanLiteral",
    "errors": Array [],
    "name": "false",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "boolean",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP ok number] =VLOOKUP(1, #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, true) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "VLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "1",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "BooleanLiteral",
    "errors": Array [],
    "name": "true",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "boolean",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [VLOOKUP ok string] =VLOOKUP("1", #28e28190-63bd-4f70-aeca-26e72574c01a, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "VLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "name": "\\"1\\"",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [XLOOKUP ok string] =XLOOKUP("1", #28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "XLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "name": "\\"1\\"",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [XLOOKUP ok string] =XLOOKUP("123", #28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, "100") 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "XLOOKUP",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "name": "\\"123\\"",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "name": ",",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "name": "\\"100\\"",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Spreadsheet Functions [column] =#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
]
`;

exports[`Spreadsheet Functions [exactin column true] ="foo" in #28e28190-63bd-4f70-aeca-26e72574c01a#2723b7d9-22ce-4d93-b2ef-7cce1b122d64 1`] = `
Array [
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "name": "\\"foo\\"",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "In",
    "errors": Array [],
    "name": "in",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#2723b7d9-22ce-4d93-b2ef-7cce1b122d64",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
]
`;

exports[`Spreadsheet Functions [in column false] =4 in #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28 1`] = `
Array [
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "4",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "In",
    "errors": Array [],
    "name": "in",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
]
`;

exports[`Spreadsheet Functions [in column true] =3 in #28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28 1`] = `
Array [
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "3",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "In",
    "errors": Array [],
    "name": "in",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
]
`;

exports[`Spreadsheet Functions [in spreadsheet false] =4 in #28e28190-63bd-4f70-aeca-26e72574c01a 1`] = `
Array [
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "4",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "In",
    "errors": Array [],
    "name": "in",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
]
`;

exports[`Spreadsheet Functions [in spreadsheet true] =3 in #28e28190-63bd-4f70-aeca-26e72574c01a 1`] = `
Array [
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "name": "3",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "In",
    "errors": Array [],
    "name": "in",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
]
`;

exports[`Spreadsheet Functions [toArray] =#28e28190-63bd-4f70-aeca-26e72574c01a.toArray() 1`] = `
Array [
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "name": ".",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "toArray",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [toArray] =#28e28190-63bd-4f70-aeca-26e72574c01a.toArray() 2`] = `
Array [
  Object {
    "result": Array [
      Object {
        "result": "first",
        "type": "string",
      },
      Object {
        "result": "second",
        "type": "string",
      },
      Object {
        "result": "third",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "1",
        "type": "string",
      },
      Object {
        "result": "2",
        "type": "string",
      },
      Object {
        "result": "3",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "3",
        "type": "string",
      },
      Object {
        "result": "4",
        "type": "string",
      },
      Object {
        "result": "",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "5",
        "type": "string",
      },
      Object {
        "result": "6",
        "type": "string",
      },
      Object {
        "result": "Foo",
        "type": "string",
      },
    ],
    "subType": "string",
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [toRecordArray] =#28e28190-63bd-4f70-aeca-26e72574c01a.toRecordArray() 1`] = `
Array [
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "name": ".",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "name": "toRecordArray",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "name": "(",
    "render": undefined,
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "name": ")",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Array",
  },
]
`;

exports[`Spreadsheet Functions [toRecordArray] =#28e28190-63bd-4f70-aeca-26e72574c01a.toRecordArray() 2`] = `
Array [
  Object {
    "result": Object {
      "first": Object {
        "result": "1",
        "type": "string",
      },
      "second": Object {
        "result": "2",
        "type": "string",
      },
      "third": Object {
        "result": "3",
        "type": "string",
      },
    },
    "subType": "string",
    "type": "Record",
  },
  Object {
    "result": Object {
      "first": Object {
        "result": "3",
        "type": "string",
      },
      "second": Object {
        "result": "4",
        "type": "string",
      },
      "third": Object {
        "result": "",
        "type": "string",
      },
    },
    "subType": "string",
    "type": "Record",
  },
  Object {
    "result": Object {
      "first": Object {
        "result": "5",
        "type": "string",
      },
      "second": Object {
        "result": "6",
        "type": "string",
      },
      "third": Object {
        "result": "Foo",
        "type": "string",
      },
    },
    "subType": "string",
    "type": "Record",
  },
]
`;

exports[`Spreadsheet Functions Spreadsheet Factory 1`] = `
Array [
  Object {
    "columnId": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "index": 0,
    "name": "first",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "rows": Array [
      "1",
      "3",
      "5",
    ],
    "type": "text",
  },
  Object {
    "columnId": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "index": 1,
    "name": "second",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "rows": Array [
      "2",
      "4",
      "6",
    ],
    "type": "text",
  },
  Object {
    "columnId": "2723b7d9-22ce-4d93-b2ef-7cce1b122d64",
    "index": 2,
    "name": "third",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "rows": Array [
      "3",
      "",
      "Foo",
    ],
    "type": "text",
  },
]
`;

exports[`Spreadsheet Functions Spreadsheet Factory 2`] = `
Array [
  Object {
    "2723b7d9-22ce-4d93-b2ef-7cce1b122d64": "3",
    "4e6f9adb-6f33-454e-9f9e-635dc98e3f28": "2",
    "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6": "1",
    "id": "ec4fdfe8-4a12-4a76-aeae-2dea0229e734",
    "sort": "100",
  },
  Object {
    "2723b7d9-22ce-4d93-b2ef-7cce1b122d64": "",
    "4e6f9adb-6f33-454e-9f9e-635dc98e3f28": "4",
    "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6": "3",
    "id": "5d1e4a83-383a-4991-a33c-52a9b3169549",
    "sort": "100",
  },
  Object {
    "2723b7d9-22ce-4d93-b2ef-7cce1b122d64": "Foo",
    "4e6f9adb-6f33-454e-9f9e-635dc98e3f28": "6",
    "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6": "5",
    "id": "05f5ae67-b982-406e-a92f-e559c10a7ba6",
    "sort": "100",
  },
]
`;

exports[`Spreadsheet Functions Spreadsheet Factory 3`] = `
Array [
  Array [
    "first",
    "second",
    "third",
  ],
  Array [
    "1",
    "2",
    "3",
  ],
  Array [
    "3",
    "4",
    "",
  ],
  Array [
    "5",
    "6",
    "Foo",
  ],
]
`;

exports[`Spreadsheet Functions Spreadsheet Factory 4`] = `
Array [
  Object {
    "first": Object {
      "result": "1",
      "type": "string",
    },
    "second": Object {
      "result": "2",
      "type": "string",
    },
    "third": Object {
      "result": "3",
      "type": "string",
    },
  },
  Object {
    "first": Object {
      "result": "3",
      "type": "string",
    },
    "second": Object {
      "result": "4",
      "type": "string",
    },
    "third": Object {
      "result": "",
      "type": "string",
    },
  },
  Object {
    "first": Object {
      "result": "5",
      "type": "string",
    },
    "second": Object {
      "result": "6",
      "type": "string",
    },
    "third": Object {
      "result": "Foo",
      "type": "string",
    },
  },
]
`;

exports[`Spreadsheet Functions completion 1`] = `
Object {
  "codeFragment": Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  "kind": "spreadsheet",
  "name": "MySpreadsheet",
  "namespace": "28e28190-63bd-4f70-aeca-26e72574c01a",
  "preview": SpreadsheetClass {
    "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "dynamic": false,
    "listColumns": [Function],
    "listRows": [Function],
    "name": [Function],
  },
  "renderDescription": [Function],
  "replacements": Array [
    "MySpreadsheet",
  ],
  "value": "#28e28190-63bd-4f70-aeca-26e72574c01a",
  "weight": 10,
}
`;

exports[`Spreadsheet Functions completion 2`] = `
Object {
  "codeFragment": Object {
    "code": "Function",
    "errors": Array [],
    "name": "SUM",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  "kind": "function",
  "name": "SUM",
  "namespace": "core",
  "preview": Object {
    "acceptError": false,
    "args": Array [
      Object {
        "name": "column",
        "type": "Column",
      },
    ],
    "async": false,
    "chain": true,
    "description": "Returns the sum of the column in the spreadsheet.",
    "effect": false,
    "examples": Array [
      Object {
        "codeFragments": Array [
          Object {
            "code": "NumberLiteral",
            "errors": Array [],
            "name": "123",
            "render": undefined,
            "spaceAfter": false,
            "spaceBefore": false,
            "type": "number",
          },
        ],
        "input": "=123",
        "output": Object {
          "result": 123,
          "type": "number",
        },
      },
    ],
    "group": "core",
    "key": "SUM",
    "lazy": false,
    "name": "SUM",
    "pure": false,
    "reference": [Function],
    "returns": "number",
    "testCases": Array [],
  },
  "renderDescription": [Function],
  "replacements": Array [
    "SUM",
  ],
  "value": "SUM()",
  "weight": 250,
}
`;

exports[`Spreadsheet Functions completion 3`] = `
Object {
  "codeFragment": Object {
    "code": "Column",
    "errors": Array [],
    "name": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "render": [Function],
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  "kind": "column",
  "name": "first",
  "namespace": "MySpreadsheet",
  "preview": Object {
    "columnId": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "index": 0,
    "name": "first",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "rows": Array [
      "1",
      "3",
      "5",
    ],
    "spreadsheet": SpreadsheetClass {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "dynamic": false,
      "listColumns": [Function],
      "listRows": [Function],
      "name": [Function],
    },
    "type": "text",
  },
  "renderDescription": [Function],
  "replacements": Array [
    "first",
    "#28e28190-63bd-4f70-aeca-26e72574c01a.first",
    "#28e28190-63bd-4f70-aeca-26e72574c01a.",
    "#28e28190-63bd-4f70-aeca-26e72574c01a",
  ],
  "value": "#28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  "weight": 997,
}
`;

exports[`Spreadsheet Functions completion 4`] = `
Object {
  "codeFragment": Object {
    "code": "Function",
    "errors": Array [],
    "name": "COLUMN_COUNT",
    "render": undefined,
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  "kind": "function",
  "name": "COLUMN_COUNT",
  "namespace": "core",
  "preview": Object {
    "acceptError": false,
    "args": Array [
      Object {
        "name": "spreadsheet",
        "type": "Spreadsheet",
      },
    ],
    "async": false,
    "chain": true,
    "description": "Returns the column size of the spreadsheet.",
    "effect": false,
    "examples": Array [
      Object {
        "codeFragments": Array [
          Object {
            "code": "NumberLiteral",
            "errors": Array [],
            "name": "123",
            "render": undefined,
            "spaceAfter": false,
            "spaceBefore": false,
            "type": "number",
          },
        ],
        "input": "=123",
        "output": Object {
          "result": 123,
          "type": "number",
        },
      },
    ],
    "group": "core",
    "key": "COLUMN_COUNT",
    "lazy": false,
    "name": "COLUMN_COUNT",
    "pure": false,
    "reference": [Function],
    "returns": "number",
    "testCases": Array [],
  },
  "renderDescription": [Function],
  "replacements": Array [
    "COLUMN_COUNT",
  ],
  "value": "COLUMN_COUNT()",
  "weight": 250,
}
`;
